--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,23 +1,20 @@
 .App {
-  text-align: center;
+  width: 100vw;
+  max-width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: center;
 }
-
-.App-image {
-  height: 300px;
-  border-radius: 50%;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Content {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.Form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
